<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_sde" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="37dp"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:text="@string/welcome_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="53dp"
        android:textSize="14sp"
        android:text="@string/input_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edt_email"
        style="@style/edit_tlogin_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="1dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:typeface="sans" />

    <EditText
        android:id="@+id/edt_password"
        style="@style/edit_tlogin_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_badge_number"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="numberPassword"
        android:padding="1dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:typeface="sans" />

    <Button
        android:id="@+id/btn_login"
        style="@style/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_acceder" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="30dp">



        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/resgister_now"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/register_acount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:typeface="normal"
            android:gravity="center"
            android:text="@string/Rhere"
            android:textColor="@color/white" />





    </LinearLayout>

    <TextView
        android:id="@+id/aboutLogo"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="295dp"
        android:background="@drawable/ic_about" />




</LinearLayout>